--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "www.example.com"
-languageCode = "en-us"
-title = "Hugo Hero Theme"
+languageCode = "ja"
+title = "Corporate Site of Zeroidea Co., Ltd. "
 themesDir = "./themes"
 theme = "hugo-hero-theme"
 
@@ -13,18 +13,18 @@ theme = "hugo-hero-theme"
   google_analytics_id=""
 
   [params.homepage_meta_tags]
-    meta_description = "Hero is a multipurpose Hugo theme with fullscreen hero images and page sections. It contains content types for a business or portfolio site."
-    meta_og_title = "Hugo Hero Theme"
+    meta_description = "Here is Coporate Site of Zeroidea Co., Ltd. We make empower the industory with ideas and hardwares which are as much as open."
+    meta_og_title = "Corporate Site of Zeroidea Co., Ltd."
     meta_og_type = "website"
-    meta_og_url = "https://hugo-hero.netlify.app"
-    meta_og_image = "https://raw.githubusercontent.com/JugglerX/hugo-hero-theme/master/images/tn.png"
-    meta_og_description = "Hero is a multipurpose Hugo theme with fullscreen hero images and page sections. It contains content types for a business or portfolio site."
+    meta_og_url = "https://www.zeroidea.co.jp"
+    # meta_og_image = "https://raw.githubusercontent.com/JugglerX/hugo-hero-theme/master/images/tn.png"
+    meta_og_description = "Our goal is to establish and maximize the economic sphere of open sources and open hardwares."
     meta_twitter_card = "summary"
-    meta_twitter_site = "@zerostaticio"
-    meta_twitter_creator = "@zerostaticio"
+    meta_twitter_site = "@ZeroideaCoLtd"
+    meta_twitter_creator = "@ZeroideaCoLtd"
 
 [[menu.main]]
-	name = "Services"
+	name = "Blog"
 	url = "/services/"
     weight = 1
 
