--- a/data/contact.yaml
+++ b/data/contact.yaml
@@ -1,28 +1,28 @@
-email: 'example@example.com'
-phone: 'XXXX XXX XXX'
-businessName: 'Hugo Serif'
+email: 'example@zeroidea.co.jp'
+phone: '090-5058-4334'
+# businessName: '大槻 祥平'
 address: |
-  123 Some Street
-  City, State 12345
-hours:
-  - day: Monday
-    open: 8:30am
-    close: 5:00pm
-  - day: Tuesday
-    open: 8:30am
-    close: 5:00pm
-  - day: Wednesday
-    open: 8:30am
-    close: 5:00pm
-  - day: Thursday
-    open: 8:30am
-    close: 5:00pm
-  - day: Friday
-    open: 8:30am
-    close: 5:00pm
-  - day: Saturday
-    open: Closed
-    close:
-  - day: Sunday
-    open: Closed
-    close:
+  千葉県市川市 菅野２−３−４
+  三蔵館１０１
+# hours:
+#   - day: Monday
+#     open: 8:30am
+#     close: 5:00pm
+#   - day: Tuesday
+#     open: 8:30am
+#     close: 5:00pm
+#   - day: Wednesday
+#     open: 8:30am
+#     close: 5:00pm
+#   - day: Thursday
+#     open: 8:30am
+#     close: 5:00pm
+#   - day: Friday
+#     open: 8:30am
+#     close: 5:00pm
+#   - day: Saturday
+#     open: Closed
+#     close:
+#   - day: Sunday
+#     open: Closed
+#     close:
