changed the folder to be made public to /docs

--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,8 @@ title = "Zeroidea Co., Ltd."
 themesDir = "./themes"
 theme = "hugo-hero-theme"
 
+publishDir = "docs"
+
 [module]
   [module.hugoVersion]
     extended = true
