--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "www.example.com"
+baseURL = "www.open-source-life.jp"
 languageCode = "ja"
 title = "Zeroidea Co., Ltd."
 themesDir = "./themes"
