--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "open-source-life.jp"
+baseURL = "zeroidea-jp.github.io/site-with-blog"
 languageCode = "ja"
 title = "Zeroidea Co., Ltd."
 themesDir = "./themes"
@@ -18,7 +18,7 @@ publishDir = "docs"
     meta_description = "Here is Coporate Site of Zeroidea Co., Ltd. We make empower the industory with ideas and hardwares which are as much as open."
     meta_og_title = "Corporate Site of Zeroidea Co., Ltd."
     meta_og_type = "website"
-    meta_og_url = "https://open-source-life.jp"
+    meta_og_url = "https://zeroidea-jp.github.io/site-with-blog"
     # meta_og_image = "https://raw.githubusercontent.com/JugglerX/hugo-hero-theme/master/images/tn.png"
     meta_og_description = "Our goal is to establish and maximize the economic sphere of open sources and open hardwares."
     meta_twitter_card = "summary"
