--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "hugo-hero-theme"]
-	path = hugo-hero-theme
+[submodule "themes/hugo-hero-theme"]
+	path = themes/hugo-hero-theme
 	url = git@github.com:zerostaticthemes/hugo-hero-theme.git
