update contact info

--- a/data/contact.yaml
+++ b/data/contact.yaml
@@ -2,8 +2,7 @@ email: 'contact@zeroidea.co.jp'
 phone: '090-5058-4334'
 # businessName: '大槻 祥平'
 address: |
-  千葉県市川市 菅野２−３−４
-  三蔵館１０１
+  京都府福知山市三和町大身 1305 番地
 # hours:
 #   - day: Monday
 #     open: 8:30am
